db name changed

--- a/Rio/Rio.Web/appsettings.json
+++ b/Rio/Rio.Web/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Data": {
     "Default": {
-      "ConnectionString": "Server=(localdb)\\MsSqlLocalDB;Database=omrapp_web_Default_v1;Integrated Security=true",
+      "ConnectionString": "Server=(localdb)\\MsSqlLocalDB;Database=omrapp_web;Integrated Security=true",
       "ProviderName": "System.Data.SqlClient"
     }
   },
