Publisher Sign up added and Approve Tenant Added

--- a/.gitignore
+++ b/.gitignore
@@ -371,3 +371,4 @@ FodyWeavers.xsd
 /Rio/Rio.Web/typings/serenity.corelib/_trigger.ts
 /Rio/Rio.Web/wwwroot/Scripts/site/Rio.Web.d.ts
 /Rio/Rio.Web/wwwroot/Scripts/site/Rio.Web.js
+/Rio/Rio.Web/App_Data/Mail
