--- a/Rio/Rio.Web/Rio.Web.csproj
+++ b/Rio/Rio.Web/Rio.Web.csproj
@@ -69,6 +69,9 @@
     <PackageReference Include="Serenity.Pro.EmailClient" Version="6.1.9" />
     <PackageReference Include="Serenity.Pro.EmailQueue" Version="6.1.9" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Namespaces\Administration\" />
+  </ItemGroup>
   <Import Project="$(ProSrc)Serenity.Pro.Coder\Serenity.Pro.Coder.targets" Condition="Exists('$(ProSrc)pro-features.sln')" />
   <Import Project="$(SolutionDir)Serenity\build\submodule.targets" Condition="Exists('$(SolutionDir)Serenity\build\submodule.targets')" />
   <Target Name="CreateInputsOutputs" BeforeTargets="BeforeBuild">
