--- a/Rio/Rio.Web/appsettings.json
+++ b/Rio/Rio.Web/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Data": {
     "Default": {
-      "ConnectionString": "Server=(local);Database=omrapp_web;Integrated Security=true",
+      "ConnectionString": "Server=(local);Database=omrapp_web;Integrated Security=true;TrustServerCertificate=True",
       "ProviderName": "System.Data.SqlClient"
     }
   },
