Background job added and send email on signup and tenantapproval added

--- a/Rio/Rio.Web/appsettings.json
+++ b/Rio/Rio.Web/appsettings.json
@@ -19,11 +19,9 @@
     "SiteExternalUrl": null
   },
   "SmtpSettings": {
-    "Host": null,
-    "Port": 25,
-    "UseSsl": false,
-    "From": null,
-    "PickupPath": "App_Data/Mail"
+    "Host": "email-smtp.us-west-2.amazonaws.com",
+    "Port": 465,
+    "UseSsl": true
   },
   "MailingService": {
     "Enabled": true,
