Import scanned Question Updated

--- a/.gitignore
+++ b/.gitignore
@@ -372,3 +372,4 @@ FodyWeavers.xsd
 /Rio/Rio.Web/wwwroot/Scripts/site/Rio.Web.d.ts
 /Rio/Rio.Web/wwwroot/Scripts/site/Rio.Web.js
 /Rio/Rio.Web/App_Data/Mail
+/Rio/Rio.Web/App_Data/upload/SheetType
