--- a/Rio/Rio.Web/appsettings.json
+++ b/Rio/Rio.Web/appsettings.json
@@ -1,6 +1,9 @@
 {
   "Data": {
     "Default": {
+      //"ConnectionString": "Data Source=C:\\Workspace\\dbs\\omr2.sqlite;",
+      //"ProviderName": "Microsoft.Data.Sqlite"
+
       "ConnectionString": "Server=(local);Database=omrapp_web;Integrated Security=true;TrustServerCertificate=True",
       "ProviderName": "System.Data.SqlClient"
     }
