Student Import fixed. Dashboard according to user fixed.

--- a/Rio/Rio.Web/appsettings.json
+++ b/Rio/Rio.Web/appsettings.json
@@ -4,7 +4,7 @@
       //"ConnectionString": "Data Source=C:\\Workspace\\dbs\\omr2.sqlite;",
       //"ProviderName": "Microsoft.Data.Sqlite"
 
-      "ConnectionString": "Server=(local);Database=omrapp_web;Integrated Security=true;TrustServerCertificate=True",
+      "ConnectionString": "Server=(local);Database=omrapp_web_cloud_db;Integrated Security=true;TrustServerCertificate=True",
       "ProviderName": "System.Data.SqlClient"
     }
   },
