TheoryExams/List2 Api added

--- a/Rio/Rio.Web/appsettings.json
+++ b/Rio/Rio.Web/appsettings.json
@@ -5,6 +5,9 @@
       //"ProviderName": "Microsoft.Data.Sqlite"
 
       "ConnectionString": "Server=(local);Database=omrapp_web;Integrated Security=true;TrustServerCertificate=True",
+
+      //Production Db :Do not use for testing
+      //"ConnectionString": "Server=tcp:omrapp.database.windows.net,1433;Initial Catalog=omrapp;Persist Security Info=False;User ID=omrapp;Password=Wind123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
       "ProviderName": "System.Data.SqlClient"
     }
   },
