--- a/Rio/Rio.Web/appsettings.json
+++ b/Rio/Rio.Web/appsettings.json
@@ -1,14 +1,15 @@
 {
   "Data": {
     "Default": {
-      //"ConnectionString": "Data Source=C:\\Workspace\\dbs\\omr2.sqlite;",
-      //"ProviderName": "Microsoft.Data.Sqlite"
+      "ConnectionString": "Data Source=C:\\Workspace\\dbs\\omrapp.sqlite;",
+      "ProviderName": "Microsoft.Data.Sqlite"
 
-      "ConnectionString": "Server=(local);Database=omrapp_web;Integrated Security=true;TrustServerCertificate=True",
+      //"ConnectionString": "Server=(local);Database=omrapp_web;Integrated Security=true;TrustServerCertificate=True",
+      //"ProviderName": "System.Data.SqlClient"
 
       //Production Db :Do not use for testing
       //"ConnectionString": "Server=tcp:omrapp.database.windows.net,1433;Initial Catalog=omrapp;Persist Security Info=False;User ID=omrapp;Password=Wind123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-      "ProviderName": "System.Data.SqlClient"
+
     }
   },
   "Logging": {
