--- a/Rio/Rio.Web/appsettings.json
+++ b/Rio/Rio.Web/appsettings.json
@@ -4,7 +4,7 @@
       "ConnectionString": "Data Source=C:\\Workspace\\dbs\\omrapp.sqlite;",
       "ProviderName": "Microsoft.Data.Sqlite"
 
-      //"ConnectionString": "Server=(local);Database=omrapp_web;Integrated Security=true;TrustServerCertificate=True",
+      //"ConnectionString": "Server=(local);Database=Omr6Dec22Local;Integrated Security=true;TrustServerCertificate=True",
       //"ProviderName": "System.Data.SqlClient"
 
       //Production Db :Do not use for testing
