db path changed

--- a/Rio/Rio.Web/appsettings.json
+++ b/Rio/Rio.Web/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Data": {
     "Default": {
-      "ConnectionString": "Data Source=C:\\Workspace\\dbs\\omrapp.sqlite;",
+      "ConnectionString": "Data Source=C:\\antargyan\\omrapp\\db\\omr.db3;cache=shared",
       "ProviderName": "Microsoft.Data.Sqlite"
 
       //"ConnectionString": "Server=(local);Database=Omr6Dec22Local;Integrated Security=true;TrustServerCertificate=True",
