--- a/.gitignore
+++ b/.gitignore
@@ -377,3 +377,4 @@ FodyWeavers.xsd
 /Rio/Rio.Web/App_Data/upload/ScannedSheet/ScannedImage/1b
 /Rio/Rio.Web/wwwroot/uploads/ScannedSheet/ScannedImage
 /Rio/Rio.Web/wwwroot/uploads/temporary
+/Rio/Rio.Web/App_Data/upload/ScannedSheet/ScannedImage
