--- a/Rio/Rio.Web/appsettings.bundles.json
+++ b/Rio/Rio.Web/appsettings.bundles.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "CssBundling": {
     "Bundles": {
       "Base": [
@@ -22,6 +22,9 @@
         "~/Scripts/datepicker/datepicker3.css",
         "~/Scripts/daterangepicker/daterangepicker-bs3.css",
         "~/Serenity.Pro.Theme/pages/dashboard.css"
+      ],
+      "Pages/ScannedSheet": [       
+        "~/Scripts/datepicker/gridcolor.css"        
       ]
     }
   },
