Question Paper,ModelAnswer added in Exam and ImageBase64 added in scannedSheet and Recity Scanned sheet updated

--- a/.gitignore
+++ b/.gitignore
@@ -378,3 +378,4 @@ FodyWeavers.xsd
 /Rio/Rio.Web/wwwroot/uploads/ScannedSheet/ScannedImage
 /Rio/Rio.Web/wwwroot/uploads/temporary
 /Rio/Rio.Web/App_Data/upload/ScannedSheet/ScannedImage
+/Rio/Rio.Web/App_Data/upload/Exam/00000
