--- a/Rio/Rio.Web/appsettings.json
+++ b/Rio/Rio.Web/appsettings.json
@@ -1,14 +1,14 @@
 {
   "Data": {
     "Default": {
-      "ConnectionString": "Data Source=C:\\antargyan\\omrapp\\db\\omr.db3;cache=shared",
-      "ProviderName": "Microsoft.Data.Sqlite"
+      //"ConnectionString": "Data Source=C:\\antargyan\\omrapp\\db\\omr.db3;cache=shared",
+      "ProviderName": "Microsoft.Data.Sqlite",
 
       //"ConnectionString": "Server=(local);Database=Omr26Dec22;Integrated Security=true;TrustServerCertificate=True",
       //"ProviderName": "System.Data.SqlClient"
 
       //Production Db :Do not use for testing
-      //"ConnectionString": "Server=tcp:omrapp.database.windows.net,1433;Initial Catalog=omrapp;Persist Security Info=False;User ID=omrapp;Password=Wind123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+      "ConnectionString": "Server=tcp:omrapp.database.windows.net,1433;Initial Catalog=omrapp;Persist Security Info=False;User ID=omrapp;Password=Wind123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
 
     }
   },
