In Predeined Import functionality added.

--- a/Rio/Rio.Web/Rio.Web.csproj
+++ b/Rio/Rio.Web/Rio.Web.csproj
@@ -79,6 +79,9 @@
     <None Update="Uploads\ImportedScannedBatchSample.xls">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Uploads\PreDefinedKeySample.xls">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Uploads\StudentSample.xls">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
