Thumbnail added in ExamList and ListExamList Api updated

--- a/.gitignore
+++ b/.gitignore
@@ -379,3 +379,4 @@ FodyWeavers.xsd
 /Rio/Rio.Web/wwwroot/uploads/temporary
 /Rio/Rio.Web/App_Data/upload/ScannedSheet/ScannedImage
 /Rio/Rio.Web/App_Data/upload/Exam/00000
+/Rio/Rio.Web/App_Data/upload/ExamLists/Thumbnail/00000
