Css added for grid color and inplace add removed

--- a/Rio/Rio.Web/appsettings.bundles.json
+++ b/Rio/Rio.Web/appsettings.bundles.json
@@ -23,8 +23,11 @@
         "~/Scripts/daterangepicker/daterangepicker-bs3.css",
         "~/Serenity.Pro.Theme/pages/dashboard.css"
       ],
-      "Pages/ScannedSheet": [       
-        "~/Scripts/datepicker/gridcolor.css"        
+      "Pages/ScannedSheet": [
+        "~/Scripts/datepicker/gridcolor.css"
+      ],
+      "Pages/SerialKey": [
+        "~/Scripts/datepicker/gridcolor.css"
       ]
     }
   },
