Cloud setting table added.

--- a/Rio/Rio.Web/appsettings.json
+++ b/Rio/Rio.Web/appsettings.json
@@ -4,7 +4,7 @@
       //"ConnectionString": "Data Source=C:\\antargyan\\omrapp\\db\\omr.db3;cache=shared",
       //"ProviderName": "Microsoft.Data.Sqlite"
 
-      "ConnectionString": "Server=(local);Database=Omr20Dec23;Integrated Security=true;TrustServerCertificate=True",
+      "ConnectionString": "Server=(local);Database=OmrWeb8;Integrated Security=true;TrustServerCertificate=True",
       "ProviderName": "System.Data.SqlClient"
 
       //Production Db :Do not use for testing
